[gd_scene load_steps=9 format=3 uid="uid://ccgcgtfo2yvux"]

[ext_resource type="PackedScene" uid="uid://6w68s6t04fv" path="res://UI/loja da morte/upgrade_card.tscn" id="1_1rh6l"]
[ext_resource type="Script" uid="uid://d03o2pxlmfven" path="res://UI/loja da morte/loja_da_morte.gd" id="1_cnfjm"]
[ext_resource type="Texture2D" uid="uid://d2asjxc1rnp4i" path="res://UI/UI_images/Alma_Comum_UI.png" id="3_v20dk"]
[ext_resource type="Texture2D" uid="uid://b2eyfu887i70i" path="res://UI/UI_images/Alma_Zumbi_incomum.png" id="4_mrer4"]
[ext_resource type="Texture2D" uid="uid://cyfqavr0lf06m" path="res://UI/UI_images/Alma_zumbi_raro.png" id="5_wfiba"]

[sub_resource type="Gradient" id="Gradient_kymv1"]
offsets = PackedFloat32Array(0, 0.24183, 0.722222, 1)
colors = PackedColorArray(0, 0.699006, 0.155429, 1, 0.790697, 0.16959, 0.187065, 1, 0.604646, 0.00389975, 0.95776, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1rh6l"]
gradient = SubResource("Gradient_kymv1")
fill_from = Vector2(0.568376, 1)
fill_to = Vector2(0.525641, 0)

[sub_resource type="LabelSettings" id="LabelSettings_v20dk"]
font_color = Color(0.843317, 0.0827182, 0.0936527, 1)

[node name="Loja_da_morte" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cnfjm")
cartas = ExtResource("1_1rh6l")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_1rh6l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="alma_comum_sprite" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_v20dk")

[node name="alma_comum_label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="alma_incomum_sprite" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_mrer4")

[node name="alma_incomum_label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="alma_rara_sprite" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_wfiba")

[node name="alma_rara_label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Voltar_pro_jogo" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Já estou pronto para reviver.
"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="aviso_almas" type="Label" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 6
text = "Você não possui almas suficiente."
label_settings = SubResource("LabelSettings_v20dk")

[node name="CardContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Upgrade_card2" parent="VBoxContainer/CardContainer" instance=ExtResource("1_1rh6l")]
visible = false
layout_mode = 2
possibilities_target = Dictionary[int, String]({})
target_possibilities = Dictionary[int, String]({})

[node name="Upgrade_card3" parent="VBoxContainer/CardContainer" instance=ExtResource("1_1rh6l")]
visible = false
layout_mode = 2
possibilities_target = Dictionary[int, String]({})
target_possibilities = Dictionary[int, String]({})

[node name="Upgrade_card4" parent="VBoxContainer/CardContainer" instance=ExtResource("1_1rh6l")]
visible = false
layout_mode = 2
possibilities_target = Dictionary[int, String]({})
target_possibilities = Dictionary[int, String]({})

[node name="Upgrade_card" parent="VBoxContainer/CardContainer" instance=ExtResource("1_1rh6l")]
visible = false
layout_mode = 2
possibilities_target = Dictionary[int, String]({})
target_possibilities = Dictionary[int, String]({})

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
button_mask = 3
text = "Atualizar: 100 "
icon = ExtResource("3_v20dk")
icon_alignment = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Voltar_pro_jogo" to="." method="_on_voltar_pro_jogo_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Button" to="." method="_on_button_pressed"]
